# VisionChain

./: 1  404.html  CNAME  README.md  build.sh  ensemble.py  index.html  mkdocs.yml  pyproject.toml  requirements.txt  serve_docs.sh
.github/workflows/: ci.yml  jekyll-gh-pages.yml
active-learning/active-learning/: index.html
analysis/discovery/: index.html
analysis/heuristics/: index.html
control_room/: index.html
demo/: colour_model.py  demo.py  get_predictions.py  kill_training.sh  vision_chain.py
demo/.ipynb_checkpoints/: demo_model_chain-checkpoint.py  vision_chain-checkpoint.py
demo/qdrant.db/: meta.json
docs/: control_room.md  index.md
docs/active-learning/: active-learning.md
docs/analysis/: discovery.md  heuristics.md
docs/automation/: automation.md
docs/datasets/: datasets.md
docs/deployment/: deployment.md  detectron2.md
docs/ensembles/: aggregations.md  ensembles.md
docs/heuristics/: heuristics.md
docs/infra/: aim.md  aws.md  cvat.md  ml_frameworks.md  mltest.md  mmdetection.md  voxel.md
docs/mkdocs_notes/: mkdocs.md
docs/problems/: problems.md
docs/resources/: resources.md
docs/testing/: testing.md
docs/thresholding/: thresholding.md
docs/training/: training.md
docs/tutorials/: mmdetection.md
docs/utils/: custom_trainer.md  frame_batch.md
ensembles/aggregations/: index.html
ensembles/ensembles/: index.html
heuristics/heuristics/: index.html
problems/problems/: index.html
site/: 404.html  index.html  sitemap.xml
site/control_room/: index.html
src/: model.py  postprocessing.py  split_dataset.py
(+69 files in other folders)
